v0.4.3 (Unreleased development release)
- [phate89] Use files.getDirectory to list playlists

v0.4.2
- [robweber] Fix for profiles shared via path substitution
- Integration with plugin.program.video.node.editor
- Change how submenuVisibility property is generated
- Skin and script default shortcuts now loaded from defaultID property
- Ability to set background and widget defaults based on defaultID
- Ability to skip warning when resetting all shortcuts
- Skin settings set to identify which backgrounds and widgets have been selected by user
- Window property to identify when additional management dialog has been launched
- Custom visibility properties are now honoured by management dialog
- Shortcuts always use video nodes (where appropriate) rather than library links
- Updated language files from Transifex (from 19th October 2014)

v0.4.0
- New localisation code
- New XML data store
- Removal of Gotham list-filling methods
- [bambi73] - Ability to replace label with widgetName
- Ability to create shortcuts to library sources not showing content from source selected
- Ability to choose random version of auto-generated source playlists as widget or background
- Ability to clone widget and background properties from main menu to submenu items
- Ability to force Settings link in menu
- Ability to return thumbnail as icon for available shortcuts
- New management dialog controls to show management dialog for additional sub-menus
- New available shortcut grouping - picture sources
- Improved labelID's for add-ons
- Indicator for default background and widget
- Menu rebuilt on changes to script-skinshortcuts-includes.xml file
- Auto-enable debug logging and offer to upload debug log on menu build failure (requires XBMC Log Uploader on system)
- Code cleanup
- Fixes
 > Fix for setting skin thumbnail property when using Just Select method
 > Fix for menus failing to build when the action for a shortcut contains a unicode character